fixing wrap issue on mobile

--- a/src/css/locales.less
+++ b/src/css/locales.less
@@ -39,7 +39,7 @@
     }
 
     @media @mobile {
-      display: block;
+      display: inline-block;
     }
 
     h2 {
